--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-oauth/google": "^0.12.1",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
+    "flag-icon-css": "^4.1.7",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
+    "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^6.26.0"
   },
   "devDependencies": {
